www/styles/less/home.less
.home-bandeau {
  background-color: #2ecc71;
  padding-top: 75px;
  padding-bottom: 75px;
}

.home-bandeau-searchbar {
  padding: 12px;
  background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.15);
}

.home-bandeau-searchbar-container {
  background-color: white;
  padding: 10px 8px;
}

.home-bandea-search-bar-icon {
  cursor: pointer;
  font-size: 24px !important;
  vertical-align: middle;
}
.home-bandea-search-bar-icon:hover {
  color: @mainColor;
}

.right-inner-addon {
  position: relative;
}
.right-inner-addon input {
  padding-right: 30px;
}
.right-inner-addon i {
  position: absolute;
  right: 0px;
  padding: 5px 6px;
}

.home-timeline-header {
  background-color: @mainColor;
  color: white;
  padding: 10px 16px;
}

.home-timeline-line {
  background-color: pink;
  padding: 14px 8px;
}

.home-categories {
  padding: 0px 30px;
  padding-top: 10px;
}

.home-best-recipes-header, .home-latest-comments-header {
  padding: 10px 20px;
  color: white;
}

.home-latest-comments-header {
  background-color: darkgreen;
}

.home-best-recipes-header {
  background-color: darkred;
}

.home-best-recipes-row, .home-latest-comments-row {
  padding: 10px 20px;
  color: white;
  vertical-align: middle;

  a {
    color: white;
  }
}

.home-best-recipes-row {
  background-color: crimson;

  .home-best-recipe-img-div {
    text-align: center;
    padding: 0px;
  }

  .home-best-recipe-img {
    height: 40px;
    max-width: 100%;
  }

  .home-best-recipe-text {
    vertical-align: middle;
  }
}

.home-latest-comments-row {
  background-color: green;
}

@media (min-width: @screen-md-min) {
  .home-best-recipes-row, .home-latest-comments-row {
    line-height: 40px;
    height: 60px;
  }
}

